5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1636_2449.log
== TEST (2019-04-04 20:10:58) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) <= 0):
	msg = "nao tem solucao"
else:
	msg = x , y
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:11:33) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) = 0):
	msg = "nao tem solucao"
else:
	msg = x , y
print(msg)
-- ERROR:
File "XXXX", line 11
    if (((a * e) - (b * d)) = 0):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:11:41) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) == 0):
	msg = "nao tem solucao"
else:
	msg = x , y
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:11:50) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) == 0):
	msg = "nao tem solucao"
else:
	msg = x , y
print(msg)
-- EXECUTION TIME:
0.158018
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:12:21) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) == 0):
	msg = "nao tem solucao"
else:
	msg = x; y
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:13:18) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:13:44) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:15:10) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if (((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.163254
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:17:33) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (x = ((c * e) - (b * f)) / ((a * e) - (b * d)) == 0;
y = ((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 8
    if (x = ((c * e) - (b * f)) / ((a * e) - (b * d)) == 0;
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:18:44) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (((c * e) - (b * f)) / ((a * e) - (b * d)) == 0;
((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	((c * e) - (b * f)) / ((a * e) - (b * d))
	((a * f) - (c * d)) / ((a * e) - (b * d))
-- ERROR:
File "XXXX", line 8
    if (((c * e) - (b * f)) / ((a * e) - (b * d)) == 0;
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:20:00) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	((c * e) - (b * f)) / ((a * e) - (b * d))
	((a * f) - (c * d)) / ((a * e) - (b * d))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:20:34) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(((a * f) - (c * d)) / ((a * e) - (b * d)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:20:43) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(((a * f) - (c * d)) / ((a * e) - (b * d)))
-- EXECUTION TIME:
0.201073
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:21:01) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(((a * f) - (c * d)) / ((a * e) - (b * d)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:39:20) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(((a * f) - (c * d)) / ((a * e) - (b * d)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:39:38) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(((a * f) - (c * d)) / ((a * e) - (b * d)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:40:02) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(((a * f) - (c * d)) / ((a * e) - (b * d)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:40:20) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(((a * f) - (c * d)) / ((a * e) - (b * d)))
-- EXECUTION TIME:
0.137934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 8, in <module>
    if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:41:16) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
((a * f) - (c * d)) / ((a * e) - (b * d)) == 0):
	print("nao tem solucao")
else:
	print(((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(((a * f) - (c * d)) / ((a * e) - (b * d)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (((c * e) - (b * f)) / ((a * e) - (b * d)) and
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:26:42) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x = ((c * e) - (b * f)) 
a = ((a * e) - (b * d))
y = ((a * f) - (c * d))
X = x/a
y = y/a

try:
	if(a == 0):
except:
	print("nao tem solucao")
else:
	print(X)
	print(Y)
	
	
		
-- ERROR:
File "XXXX", line 15
    except:
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:29:58) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))
X = x1/z1
Y = y1/z1

try:
	print(X and Y)
except:
	print("nao tem solucao")
else:
	print(X)
	print(Y)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    X = x1/z1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:30:14) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))
X = x1/z1
Y = y1/z1

try:
	print(X and Y)
except:
	print("nao tem solucao")
else:
	print(X)
	print(Y)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    X = x1/z1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:30:25) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))
X = x1/z1
Y = y1/z1

try:
	print(X and Y)
except:
	print("nao tem solucao")
else:
	print(X)
	print(Y)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    X = x1/z1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:33:19) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("nao tem solucao")
if(z1 != 0):
	print(X)
	print(Y)
	
	
		
-- OUTPUT:
nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:33:36) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("nao tem solucao")
if(z1 != 0):
	print(X)
	print(Y)
	
	
		
-- OUTPUT:
nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:34:09) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("nao tem solucao")
if(z1 != 0):
	print(x1/z1)
	print(y1/z1)
	
	
		
-- OUTPUT:
nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:34:19) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("nao tem solucao")
if(z1 != 0):
	print(x1/z1)
	print(y1/z1)
	
	
		
-- EXECUTION TIME:
0.182744
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
1.528301886792453
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
1.1618589743589745
-0.15705128205128205
1.1618589743589745
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:34:46) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("nao tem solucao")
if(z1 != 0):
	print(x1/z1)
	print(y1/z1)
	
	
		
-- OUTPUT:
nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:35:22) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("Nao tem solucao")
if(z1 != 0):
	print(x1/z1)
	print(y1/z1)
	
	
		
-- EXECUTION TIME:
0.152261
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
1.528301886792453
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
1.1618589743589745
-0.15705128205128205
1.1618589743589745
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:35:37) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("Nao tem solucao")
if(z1 != 0):
	print(x1/z1)
	print(y1/z1)
	
	
		
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:35:57) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("Nao tem solucao")
if(z1 != 0):
	print(x1/z1)
	print(y1/z1)
	
	
		
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:37:48) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))
x = x1/z1
y = y1/z1
try:
	print(x and y)
except ZeroDivisionError:
	print("Nao tem solucao")
if(z1 != 0):
	print(x)
	print(y)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x = x1/z1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:39:09) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("nao tem solucao")
if(z1 != 0):
	print(x1/z1)
	print(y1/z1)
	
	
		
-- OUTPUT:
nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:41:50) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("nao tem solucao")
if(z1 != 0):
	print(x1/z1)
	print(y1/z1)
	
	
		
-- OUTPUT:
nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:42:25) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

try:
	print(x1/z1 and y1/z1)
except ZeroDivisionError:
	print("nao tem solucao")
if(z1 != 0):
	print(x1/z1)
	print(y1/z1)
	
	
		
-- OUTPUT:
nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:12:37) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

X = x1/z1
Y = y1/z1
if (z1 == 0):
	print("Nao tem solucao")
else:
	print(X)
	print(Y)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    X = x1/z1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:13:09) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

X = x1/z1
Y = y1/z1
if (z1 == 0):
	print("Nao tem solucao")
else:
	print(X)
	print(Y)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    X = x1/z1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:35:30) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

X = x1/z1
Y = y1/z1
if (z1 != 0):
	print("Nao tem solucao")
else:
	print(X)
	print(Y)
	
	
		
-- EXECUTION TIME:
0.196038
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 11, in <module>
    X = x1/z1
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:36:12) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

X = x1/z1
Y = y1/z1
if (z1 != 0):
	print(X)
	print(Y)
else:
	print("Nao tem solucao")
	
	
		
-- EXECUTION TIME:
0.126933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 11, in <module>
    X = x1/z1
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:39:06) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

X = x1/z1
Y = y1/z1
if (z1 != 0):
	print(X)
	print(Y)
else:
	print("Nao tem solucao")
	
	
		
-- EXECUTION TIME:
0.136772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 11, in <module>
    X = x1/z1
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:39:08) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

X = x1/z1
Y = y1/z1
if (z1 != 0):
	print(X)
	print(Y)
else:
	print("Nao tem solucao")
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    X = x1/z1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:41:19) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))

X = x1/z1
Y = y1/z1
if (z1 != 0):
	print(X)
	print(Y)
else:
	print("Nao tem solucao")
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    X = x1/z1
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:42:39) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))
if (z1 != 0):
	print( x1/z1)
	print( y1/z1)
else:
	print("Nao tem solucao")
	
	
		
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:42:59) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))
x1 = ((c * e) - (b * f)) 
z1 = ((a * e) - (b * d))
y1 = ((a * f) - (c * d))
if (z1 != 0):
	print( x1/z1)
	print( y1/z1)
else:
	print("Nao tem solucao")
	
	
		
-- EXECUTION TIME:
0.165127
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
